# tic_tac_toe

./: CMakeLists.txt  Makefile  README.md  config
docs/html/: about__page_8c.html  about__page_8c__incl.map  about__page_8c__incl.md5  about__page_8c_source.html  about__page_8h.html  about__page_8h__dep__incl.map  about__page_8h__dep__incl.md5  about__page_8h__incl.map  about__page_8h__incl.md5  about__page_8h_source.html  annotated.html  builder_8c.html  builder_8c__incl.map  builder_8c__incl.md5  builder_8c_source.html  builder_8h.html  builder_8h__dep__incl.map  builder_8h__dep__incl.md5  builder_8h__incl.map  builder_8h__incl.md5  builder_8h_source.html  classes.html  dir_000001_000003.html  dir_000001_000004.html  dir_000001_000005.html  dir_000001_000006.html  dir_000001_000007.html  dir_000001_000008.html  dir_000001_000009.html  dir_000001_000010.html  dir_000001_000011.html  dir_000001_000012.html  dir_000001_000013.html  dir_000001_000014.html  dir_000001_000015.html  dir_000001_000016.html  dir_000001_000017.html  dir_000001_000018.html  dir_000001_000019.html  dir_000002_000001.html  (+277 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  files_0.js  files_1.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  files_b.js  functions_0.js  functions_1.js  (+36 more)
report/: acronyms.tex  addons.tex  content.tex  report.tex
resources/: Export_De3fa4460c3f8afd7921a161b98c3a679.docx
src/: main.c
src/css/: style.css
src/headers/: builder.h  data_manager.h  imports.h  tools.h
src/helpers/: builder.c  data_manager.c  tools.c
src/modules/ai_player/: ai_player.c  ai_player.h
src/modules/builder/: builder.c  builder.h
src/modules/data_manager/: data_manager.h
src/modules/minimax_alphabeta_ai_player/: minimax_alphabeta_ai_player.c  minimax_alphabeta_ai_player.h
src/modules/random_ai_player/: random_ai_player.c  random_ai_player.h
src/modules/saves_manager/: saves_manager.c  saves_manager.h
src/modules/score_manager/: score_manager.c  score_manager.h
src/modules/users_manager/: users_manager.c  users_manager.h
src/pages/about/: about.glade  about.glade~  about_page.c  about_page.h
src/pages/game/: game.c  game.glade  game.glade~  game.h
src/pages/history/: history.glade  history.glade~  history_page.c  history_page.h
src/pages/load_game/: load_game.glade  load_game.glade~  load_game_page.c  load_game_page.h
src/pages/main/: main.glade  main.glade~  main_page.c  main_page.h
src/pages/new_game/: new_game.glade  new_game.glade~  new_game_page.c  new_game_page.h
src/pages/scores/: scores.glade  scores.glade~  scores_page.c  scores_page.h
src/pages/signin/: signin.glade  signin.glade~  signin_page.c  signin_page.h
src/pages/signup/: signup.glade  signup.glade~  signup_page.c  signup_page.h
